# Todolist

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  docker-build.yml
Todolist/: middleware.py  settings.py  urls.py
core/: admin.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
tgbot/: apps.py  models.py  serializers.py  urls.py  views.py
tgbot/management/commands/: runbot.py
tgbot/migrations/: 0001_initial.py  0002_tguser_verification_code.py  0003_alter_tguser_verification_code.py
tgbot/tg/: __init__.py  client.py  dc.py
todolist-frontend/: README.md
